# SGRL

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  main.py  new file: generate_schematic.py  pyproject.toml
.github/workflows/: ci.yml
dataset/mock_data/: sample_knowledge_graph.py
misc/: generate_schematic.py
ollama_llm/: serve_model.py
semantic_graph_rl/data/: graph_dataset.py
semantic_graph_rl/models/: graph_embeddings.py  lightning_rl_agent.py  rl_agent.py
semantic_graph_rl/utils/: evaluation.py  graph_utils.py  nlp_utils.py
