[tool.poetry]
name = "semantic-graph-rl"
version = "0.1.0"
description = "Semantic Graph Reinforcement Learning Project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dgl = "^0.9.1"
torch = "^1.10.0"
pytorch-lightning = "^1.6.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
mlflow = "^1.20.0"
llama-index = "^0.5.0"
coreferee = "^1.1.0"
transformers = "^4.12.0"
stable-baselines3 = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py39"
