[tool.poetry]
name = "semantic-graph-rl"
version = "0.1.0"
description = "Semantic Graph Reinforcement Learning Project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dgl = "^1.0.0"
torch = "^2.0.0"
lightning = "^2.1.0"
numpy = "^1.24.0"
pandas = "^1.5.0"
scikit-learn = "^1.2.0"
mlflow = "^2.0.0"
llama-index = "^0.6.0"
coreferee = "^1.2.0"
transformers = "^4.30.0"
stable-baselines3 = "^1.7.0"
hydra-core = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^23.1a1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py39"
