[tool.poetry]
name = "semantic-graph-rl"
version = "0.1.0"
description = "Semantic Graph Reinforcement Learning Project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
lightning = "^2.4.0"
mlflow = "^2.15.1"
llama-index = "^0.10.65"
coreferee = "^1.4.1"
stable-baselines3 = "^2.3.2"
hydra-core = "^1.3.2"
torch = "2.3.0"
dgl = "2.2.0"


[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"
